objects/Booking_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Comment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Booking Comment Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booking Comments</relationshipLabel>
        <relationshipName>Booking_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_Text__c</fullName>
        <label>Comment Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Agent_Id__c</fullName>
        <label>Created Agent Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date (Navitaire)</label>
        <type>DateTime</type>
    </fields>
    <label>Booking Comment</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>